# pt1-43-21-14

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  db.py  main.py  models.py
app/api/: __init__.py  crud.py  routes.py
tests/: __init__.py  conftest.py  test_notes.py
